--- a/css/vno.css
+++ b/css/vno.css
@@ -339,7 +339,7 @@ hr {
   width: 100%;
   max-width: none;
   height: 100%;
-  background: url(../img/2.jpg) top left no-repeat #666666;
+  background: url(../img/2.JPG) top left no-repeat #666666;
   background-size: cover; }
 
 .panel-cover--collapsed {
